# re-qmix

./: README.md  config.json  config.py  follower_env.py  remix.py  replay_buffer.py
docker/: build.sh  dockerfile  requirements.txt
docker/pogema/: build.sh  dockerfile  requirements.txt
follower/: inference.py  planning.py  preprocessing.py  register_training_utils.py  training_config.py  training_utils.py
follower_cpp/: CMakeLists.txt  config.cpp  config.h  follower.cpp  inference.py  planner.h
plots/: plots.md
